--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=7.1",
-        "ext-sqlite3": "*",
+        "php": "7.1",
+        "ext-pdo_sqlite": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
