--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,12 +39,12 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        url: '%database_path%'
+        url: '%database_url%'
         charset: UTF8
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
-        naming_strategy: doctrine.orm.naming_strategy.underscore
+        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
 
 # Swiftmailer Configuration
