--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,7 +3,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
     # You should uncomment this if you want to use pdo_sqlite
-    database_path: '%env(DB_URL)%'
+    database_url: '%env(DB_URL)%'
 
     mailer_transport: smtp
     mailer_host: 127.0.0.1
