--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer": "^1.14",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
@@ -28,6 +29,8 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "everycheck/test-api-rest-bundle": "dev-master",
+        "guzzlehttp/guzzle": "^6.5",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
@@ -45,6 +48,12 @@
         ],
         "post-update-cmd": [
             "@symfony-scripts"
+        ],
+        "setup-tests": [
+            "rm var/data.sqlite",
+            "bin/console d:d:c",
+            "bin/console d:s:c",
+            "php tests/AppBundle/DataFixtures/LoadAccess.php 'http://127.0.0.1:8000' false"
         ]
     },
     "config": {
