fixed Jms serializer not found with composer install --no-dev

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "doctrine/doctrine-migrations-bundle": "^2.2",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
-        "jms/serializer": "^1.14",
+        "jms/serializer-bundle": "^2.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
